Fixed the endpoint and ket authentication.

--- a/Lab2-AI/.env
+++ b/Lab2-AI/.env
@@ -1,2 +1,2 @@
-﻿VISION_KEY=2a16c7f14f954af0be5fb2f2bf85eacf
-VISION_ENDPOINT=https://visualrecservice.cognitiveservices.azure.com/
+﻿VISION_KEY=2734a2ddbd0e4d08947193340f592f55
+VISION_ENDPOINT=https://aiservicevisual.cognitiveservices.azure.com/
