--- a/Lab2-AI/appsettings.json
+++ b/Lab2-AI/appsettings.json
@@ -1,4 +1,4 @@
 {
-  "CognitiveServicesEndpoint": "https://visualrecservice.cognitiveservices.azure.com/",
-  "CognitiveServiceKey": "2a16c7f14f954af0be5fb2f2bf85eacf"
+  "CognitiveServicesEndpoint": "https://aiservicevisual.cognitiveservices.azure.com/",
+  "CognitiveServiceKey": "2734a2ddbd0e4d08947193340f592f55"
 }
